--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Employee-Seating-System
+
+# 配置 mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/tingli?useSSL=false&serverTimezone=Asia/Taipei&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 配置 @Slf4j 記錄日誌
+logging.level.root=WARN
+logging.level.com.example.demo=INFO
+logging.file.name=/Users/liutingli/Desktop/esun/Employee-Seating-System/src/main/resources/system.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
