--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=Employee-Seating-System
+server.port=8081
 
 # 配置 mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/tingli?useSSL=false&serverTimezone=Asia/Taipei&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/office?useSSL=false&serverTimezone=Asia/Taipei&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
